@@ -1302,7 +1302,7 @@ class ConferenceDataLoaderExecutorTest {
         final String PHOTO_FILE_NAME0 = "0000.jpg";
         final String PHOTO_FILE_NAME1 = "0001.jpg";
         final String PHOTO_FILE_NAME2 = "http://valid.com/2.jpg";
-        final String WIDTH_PARAMETER_NAME = "w";
+        final String IMAGE_PARAMETERS_TEMPLATE = "w=%d&h=%d";
 
         private Stream<Arguments> data() {
             Speaker speaker0 = new Speaker();
@@ -1364,21 +1364,25 @@ class ConferenceDataLoaderExecutorTest {
                             Collections.emptyList()));
 
             return Stream.of(
-                    arguments(Collections.emptyList(), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult0, WIDTH_PARAMETER_NAME),
-                    arguments(List.of(speaker2), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult1, WIDTH_PARAMETER_NAME),
-                    arguments(List.of(speaker0), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult2, WIDTH_PARAMETER_NAME),
-                    arguments(List.of(speaker1), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult3, WIDTH_PARAMETER_NAME)
+                    arguments(Collections.emptyList(), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult0,
+                            IMAGE_PARAMETERS_TEMPLATE),
+                    arguments(List.of(speaker2), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult1,
+                            IMAGE_PARAMETERS_TEMPLATE),
+                    arguments(List.of(speaker0), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult2,
+                            IMAGE_PARAMETERS_TEMPLATE),
+                    arguments(List.of(speaker1), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult3,
+                            IMAGE_PARAMETERS_TEMPLATE)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
         void getSpeakerLoadResult(List<Speaker> speakers, SpeakerLoadMaps speakerLoadMaps, AtomicLong lastSpeakerId,
-                                  SpeakerLoadResult expected, String imageWidthParameterName) throws IOException {
+                                  SpeakerLoadResult expected, String imageParametersTemplate) throws IOException {
             try (MockedStatic<ConferenceDataLoaderExecutor> conferenceDataLoaderExecutorMockedStatic = Mockito.mockStatic(ConferenceDataLoaderExecutor.class)) {
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.needPhotoUpdate(
-                                Mockito.nullable(ZonedDateTime.class), Mockito.nullable(ZonedDateTime.class), Mockito.nullable(String.class),
-                                Mockito.nullable(String.class), Mockito.anyString()))
+                                Mockito.nullable(ZonedDateTime.class), Mockito.nullable(ZonedDateTime.class),
+                                Mockito.nullable(String.class), Mockito.nullable(String.class), Mockito.anyString()))
                         .thenAnswer(
                                 (Answer<Boolean>) invocation -> {
                                     Object[] args = invocation.getArguments();
@@ -1395,7 +1399,8 @@ class ConferenceDataLoaderExecutorTest {
                                 }
                         );
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.getSpeakerLoadResult(
-                                Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any(AtomicLong.class), Mockito.anyString()))
+                                Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any(AtomicLong.class),
+                                Mockito.anyString()))
                         .thenCallRealMethod();
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.findResourceSpeaker(Mockito.any(Speaker.class), Mockito.any(SpeakerLoadMaps.class)))
                         .thenAnswer(
@@ -1407,7 +1412,8 @@ class ConferenceDataLoaderExecutorTest {
                                 }
                         );
 
-                assertEquals(expected, ConferenceDataLoaderExecutor.getSpeakerLoadResult(speakers, speakerLoadMaps, lastSpeakerId, imageWidthParameterName));
+                assertEquals(expected, ConferenceDataLoaderExecutor.getSpeakerLoadResult(speakers, speakerLoadMaps,
+                        lastSpeakerId, imageParametersTemplate));
             }
         }
     }
@@ -2455,7 +2461,7 @@ class ConferenceDataLoaderExecutorTest {
                     for (LoadResult<List<Talk>> talkLoadResult : List.of(talkLoadResult0, talkLoadResult1, talkLoadResult2, talkLoadResult3)) {
                         for (SpeakerLoadResult speakerLoadResult : List.of(speakerLoadResult0, speakerLoadResult1, speakerLoadResult2, speakerLoadResult3, speakerLoadResult4)) {
                             for (LoadResult<List<Company>> companyLoadResult : List.of(companyLoadResult0, companyLoadResult1)) {
-                                argumentsList.add(arguments(companyLoadResult, speakerLoadResult, talkLoadResult, placeLoadResult, eventLoadResult, "w"));
+                                argumentsList.add(arguments(companyLoadResult, speakerLoadResult, talkLoadResult, placeLoadResult, eventLoadResult, "w=%d&h=%d"));
                             }
                         }
                     }
@@ -2469,7 +2475,7 @@ class ConferenceDataLoaderExecutorTest {
         @MethodSource("data")
         @SuppressWarnings("unchecked")
         void saveFiles(LoadResult<List<Company>> companyLoadResult, SpeakerLoadResult speakerLoadResult, LoadResult<List<Talk>> talkLoadResult,
-                       LoadResult<List<Place>> placeLoadResult, LoadResult<Event> eventLoadResult, String imageWidthParameterName) {
+                       LoadResult<List<Place>> placeLoadResult, LoadResult<Event> eventLoadResult, String imageParametersTemplate) {
             try (MockedStatic<ConferenceDataLoaderExecutor> mockedStatic = Mockito.mockStatic(ConferenceDataLoaderExecutor.class)) {
                 mockedStatic.when(() -> ConferenceDataLoaderExecutor.saveFiles(
                                 Mockito.any(LoadResult.class), Mockito.any(SpeakerLoadResult.class), Mockito.any(LoadResult.class),
@@ -2477,7 +2483,7 @@ class ConferenceDataLoaderExecutorTest {
                         .thenCallRealMethod();
 
                 assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveFiles(companyLoadResult, speakerLoadResult,
-                        talkLoadResult, placeLoadResult, eventLoadResult, imageWidthParameterName));
+                        talkLoadResult, placeLoadResult, eventLoadResult, imageParametersTemplate));
             }
         }
     }
@@ -2528,7 +2534,7 @@ class ConferenceDataLoaderExecutorTest {
         private Stream<Arguments> data() {
             UrlFilename urlFilename0 = new UrlFilename("url0", "filename0");
             UrlFilename urlFilename1 = new UrlFilename("url1", "filename1");
-            String WIDTH_PARAMETER_NAME = "w";
+            final String IMAGE_PARAMETERS_TEMPLATE = "w=%d&h=%d";
 
             SpeakerLoadResult speakerLoadResult0 = new SpeakerLoadResult(
                     new LoadResult<>(
@@ -2551,19 +2557,19 @@ class ConferenceDataLoaderExecutorTest {
                             List.of(urlFilename1)));
 
             return Stream.of(
-                    arguments(speakerLoadResult0, WIDTH_PARAMETER_NAME),
-                    arguments(speakerLoadResult1, WIDTH_PARAMETER_NAME)
+                    arguments(speakerLoadResult0, IMAGE_PARAMETERS_TEMPLATE),
+                    arguments(speakerLoadResult1, IMAGE_PARAMETERS_TEMPLATE)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void saveImages(SpeakerLoadResult speakerLoadResult, String imageWidthParameterName) {
+        void saveImages(SpeakerLoadResult speakerLoadResult, String imageParametersTemplate) {
             try (MockedStatic<ConferenceDataLoaderExecutor> mockedStatic = Mockito.mockStatic(ConferenceDataLoaderExecutor.class)) {
                 mockedStatic.when(() -> ConferenceDataLoaderExecutor.saveImages(Mockito.any(SpeakerLoadResult.class), Mockito.anyString()))
                         .thenCallRealMethod();
 
-                assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveImages(speakerLoadResult, imageWidthParameterName));
+                assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveImages(speakerLoadResult, imageParametersTemplate));
             }
         }
     }
@@ -2753,7 +2759,8 @@ class ConferenceDataLoaderExecutorTest {
     @Test
     void logAndCreateSpeakerImages() {
         try (MockedStatic<ImageUtils> mockedStatic = Mockito.mockStatic(ImageUtils.class)) {
-            assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.logAndCreateSpeakerImages(List.of(new UrlFilename("url", "filename")), "{}", "w"));
+            assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.logAndCreateSpeakerImages(
+                    List.of(new UrlFilename("url", "filename")), "{}", "w=%d&h=%d"));
         }
     }
 
@@ -4503,35 +4510,35 @@ class ConferenceDataLoaderExecutorTest {
             final ZonedDateTime YESTERDAY = NOW.minus(1, ChronoUnit.DAYS);
             final String VALID_URL = "https://valid.com";
             final String PHOTO_FILE_NAME = "0000.jpg";
-            final String WIDTH_PARAMETER_NAME = "w";
+            final String IMAGE_PARAMETERS_TEMPLATE = "w=%d&h=%d";
 
             return Stream.of(
-                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, true),
-                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, true),
-                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, false),
-                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, false),
-                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, true),
-                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, true),
-                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, false),
-                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, false),
-                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, true),
-                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, true),
-                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, false),
-                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, false)
+                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, true, true),
+                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, true, true),
+                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, false, false),
+                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, false, false),
+                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, true, true),
+                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, false, true),
+                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, true, false),
+                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, false, false),
+                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, true, true),
+                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, false, true),
+                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, true, false),
+                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, IMAGE_PARAMETERS_TEMPLATE, false, false)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
         void needPhotoUpdate(ZonedDateTime targetPhotoUpdatedAt, ZonedDateTime resourcePhotoUpdatedAt,
-                             String targetPhotoUrl, String resourcePhotoFileName, String imageWidthParameterName,
+                             String targetPhotoUrl, String resourcePhotoFileName, String imageParametersTemplate,
                              boolean needUpdate, boolean expected) throws IOException {
             try (MockedStatic<ImageUtils> mockedStatic = Mockito.mockStatic(ImageUtils.class)) {
                 mockedStatic.when(() -> ImageUtils.needUpdate(Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
                         .thenReturn(needUpdate);
 
                 assertEquals(expected, ConferenceDataLoaderExecutor.needPhotoUpdate(targetPhotoUpdatedAt, resourcePhotoUpdatedAt,
-                        targetPhotoUrl, resourcePhotoFileName, imageWidthParameterName));
+                        targetPhotoUrl, resourcePhotoFileName, imageParametersTemplate));
             }
         }
     }
